# tfg

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: actionTemplate.action
src/: Utils.py  main.py
src/__test__/: actionTemplate.py  mynode.test  test.py
src/audios/: test
src/config/: AWS.py  jinkobot.json
src/launch/: actionTemplate.launch  main.launch  stateMachine.launch
src/services/: Polly.py  db.py
src/servicesClients/: emotionClient.py  orientationClient.py
src/stateMachine/: Emotion.py  Grettings.py  Orientation.py  README.md  Results.py  stateMachine.py
src/test/: emotion.py  emotion.test  utils.py  utils.test
