<?xml version="1.0"?>
<package format="2">
  <name>action_template</name>
  <version>1.0.0</version>
  <description>JinkoBot state machine</description>

  <maintainer email="dianahdezsoler@gmail.com">Diana</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
   <build_depend>smach</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>jinko_service_msg</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>smach</build_export_depend>
  <build_export_depend>smach_ros</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>jinko_service_msg</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>

  <export>
  </export>
</package>
